--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,11 @@
 $prim: #2196f3;
 
+
 form {
     padding: 20px;
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    background: #ffffff;
 
     input,
     button {
