--- a/src/app.scss
+++ b/src/app.scss
@@ -52,8 +52,10 @@ ul {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 16px 0;
+        padding: 16px;
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        transition: 300ms;
+        cursor: pointer;
 
         h4 {
             margin: 0;
@@ -65,6 +67,17 @@ ul {
         p {
             margin: 0;
             color: #777;
+        }
+
+        &:hover {
+            box-shadow: 0 5px 15px -4px rgba(50, 50, 50, 0.2);
+            border-bottom-color: transparent;
+            background: rgba(#fff, .1);
+
+            h4,
+            p {
+                color: #2196F3
+            }
         }
     }
 }
